FIX: adjust column gap in info section

--- a/src/dashboard/accounts/take-payment-form/index.css
+++ b/src/dashboard/accounts/take-payment-form/index.css
@@ -25,7 +25,6 @@
 .take-payment__card {
     display: flex;
     flex-direction: column;
-    flex: 0 1 494px;
     max-width: 494px;
     row-gap: 18px;
     padding: 20px;
